Added API docs
