# accounts/handlers/getAccount.go
@@ -11,6 +11,15 @@ import (
 	"net/http"
 )
 
+// GetAllAccounts 	godoc
+//
+//	@Summary		Retrieve all account data
+//	@Description	Retrieve information about all existing accounts
+//	@Tags			accounts
+//	@Produce		json
+//	@Success		200	{array}		models.User		"Every existing account"
+//	@Failure		500	{object}	models.HTTP500	"Server could not retrieve or process the data"
+//	@Router			/accounts/ [get]
 func GetAllAccounts(w http.ResponseWriter, _ *http.Request) {
 	var users []models.User
 	ctx := context.TODO()
@@ -37,6 +46,17 @@ func GetAllAccounts(w http.ResponseWriter, _ *http.Request) {
 	_, _ = w.Write(response)
 }
 
+// GetAccountByID 	godoc
+//
+//	@Summary		Retrieve an account
+//	@Description	Retrieve information about an account with given ID
+//	@Tags			accounts
+//	@Produce		json
+//	@Param			user_id	path		string			true	"ID of the user to retrieve"
+//	@Success		200		{object}	models.User		"Account retrieved successfully"
+//	@Failure		400		{object}	models.HTTP400	"Invalid ID format"
+//	@Failure		404		{object}	models.HTTP404	"No user with given ID was found"
+//	@Router			/accounts/{user_id} [get]
 func GetAccountByID(w http.ResponseWriter, r *http.Request) {
 	ID := chi.URLParam(r, "user_id")
 
